<resources>
    <string name="app_name">DiceRoller_3D</string>
    <string name="butSelectionText">Selection</string>
    <string name="butHistoryText">History</string>
    <string name="butSettingsText">Settings</string>
    <string name="diceNumberSettingText">Number of dices</string>
    <string name="soundSetting">Sound on</string>
    <string name="diceDisplaySetting">3D</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="saveSettingsButtonText">Save</string>
    <string name="selectionActivityLabel">Selection</string>
    <string name="settingsActivityLabel">Settings</string>
    <string name="historyActivityLabel">History</string>
</resources>
